fix: auto test error